# Gaslight-Detector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/Workflows/: ci.yaml
configs/: default.yaml  providers
examples/: analyze_saved_outputs  run_provider_comparison  run_single_task
examples/fixtures/: demo_raw_responses
gaslight_detector/analysis/: _init_,py  bootstrap.py  pipeline.py
gaslight_detector/geometry/: _init_.py  discontinuity.py  distances.py  spike.py
gaslight_detector/prompts/: _init_.py  controls.py  ladder.py  perturbations.py
gaslight_detector/reports/: _init_.py  html.py  json_report.py  markdown.py  plots.py
gaslight_detector/runners/: _init_.py  anthropicrunner.py  base.py  local_runner.py  openai_runner  registry.py  replay_runner.py
gaslight_detector/scoring/: _init_.py  aggregate.py  features.py  lexicons.py  panel.py
gaslight_detector/scoring/embedders/: _init_.py  base.py  hashing.py  sentence_transformer.py
gaslight_detector/scoring/scorers/: _init_.py  base.py  judge_scorer.py  lexical_scorer.py  semantic_scorer.py
gaslight_detector/tasks/: _init_.py  loader.py  schema.py  validators.py
